--- a/management/package.json
+++ b/management/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.3",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.406.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
