--- a/management/package.json
+++ b/management/package.json
@@ -19,6 +19,8 @@
     "firebase": "^10.12.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.406.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
