--- a/management/package.json
+++ b/management/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.406.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
