--- a/management/package.json
+++ b/management/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.406.0",
@@ -33,6 +34,8 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-phone-number-input": "^3.4.3",
