--- a/management/package.json
+++ b/management/package.json
@@ -37,6 +37,7 @@
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-phone-number-input": "^3.4.3",
     "sonner": "^1.5.0",
