--- a/management/package.json
+++ b/management/package.json
@@ -40,6 +40,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-phone-number-input": "^3.4.3",
+    "react-toastify": "^10.0.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
