--- a/management/package.json
+++ b/management/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
+    "react-paginate": "^8.2.0",
     "react-phone-number-input": "^3.4.3",
     "react-toastify": "^10.0.5",
     "sonner": "^1.5.0",
